| Summary: | ASTERISK-28081: chan_sip: Asterisk 12+ chan_sip doesn't report AST_CEL_PICKUP in handle_invite_replaces | ||
| Reporter: | Luit van Drongelen (luit) | Labels: | |
| Date Opened: | 2018-09-28 06:43:33 | Date Closed: | 2018-11-05 09:33:32.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | CEL/General Channels/chan_sip/General |
| Versions: | 13.22.0 13.23.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | We are migrating from Asterisk 11 to Asterisk 13 and noticed the AST_CEL_PICKUP event is fired correctly by app_pickup, but no longer by chan_sip from handle_invite_replaces.
This was previously added to Asterisk 11 by ASTERISK-22977 (which was done by Walter, at my request). Funny how we appear to be the only ones really using the Channel Event Log. A colleague of mine is working on a patch which he can propose for upstream soon. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-09-28 06:43:34.173-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Joshua C. Colp (jcolp) 2018-10-01 04:27:13.781-0500 As you are planning to provide a patch I've assigned this to you for now. By: Luit van Drongelen (luit) 2018-10-10 10:40:39.837-0500 My colleague [~jasper.hafkenscheid] has added the patch containing our approach to solving this issue. By: Friendly Automation (friendly-automation) 2018-11-05 09:33:32.726-0600 Change 10451 merged by George Joseph: chan_sip: Attempt ast_do_pickup in handle_invite_replaces [https://gerrit.asterisk.org/10451|https://gerrit.asterisk.org/10451] By: Friendly Automation (friendly-automation) 2018-11-05 09:33:53.246-0600 Change 10452 merged by George Joseph: chan_sip: Attempt ast_do_pickup in handle_invite_replaces [https://gerrit.asterisk.org/10452|https://gerrit.asterisk.org/10452] By: Friendly Automation (friendly-automation) 2018-11-05 09:34:20.428-0600 Change 10448 merged by George Joseph: chan_sip: Attempt ast_do_pickup in handle_invite_replaces [https://gerrit.asterisk.org/10448|https://gerrit.asterisk.org/10448] | ||